--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,2 +1,7 @@
 [deps]
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+QuantumLattices = "78ae1a1f-1d5d-5174-b61c-66e31b2346dc"
+SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
+SpinWaveTheory = "0f33b1d1-764a-4710-8fd7-79355e2c9255"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+TightBindingApproximation = "d3576f78-cb9d-4774-9dc5-b247cf392ff4"
