--- a/Project.toml
+++ b/Project.toml
@@ -11,8 +11,8 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TightBindingApproximation = "d3576f78-cb9d-4774-9dc5-b247cf392ff4"
 
 [compat]
-QuantumLattices = "0.9.5"
-SpinWaveTheory = "0.1.10"
+QuantumLattices = "0.9.9"
+SpinWaveTheory = "0.1.11"
 StaticArrays = "1.4"
-TightBindingApproximation = "0.1.17"
-julia = "1.8"
+TightBindingApproximation = "0.1.18"
+julia = "1.8 - 1.9"
