--- a/Project.toml
+++ b/Project.toml
@@ -15,4 +15,4 @@ QuantumLattices = "0.9.14"
 SpinWaveTheory = "0.1.12"
 StaticArrays = "1.4"
 TightBindingApproximation = "0.1.21"
-julia = "1.8 - 1.10"
+julia = "1.10"
