--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -49,14 +49,22 @@ jobs:
       - uses: julia-actions/setup-julia@v1
         with:
           version: '1'
-      - uses: julia-actions/julia-buildpkg@v1
-      - uses: julia-actions/julia-docdeploy@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
+      - run: |
+          julia --project=docs -e '
+            using Pkg
+            Pkg.develop(PackageSpec(path=pwd()))
+            Pkg.instantiate()
+            ENV["PYTHON"]=""
+            Pkg.build("PyCall")'
       - run: |
           julia --project=docs -e '
             using Documenter: DocMeta, doctest
             using MagnonPhononHybridization
             DocMeta.setdocmeta!(MagnonPhononHybridization, :DocTestSetup, :(using MagnonPhononHybridization); recursive=true)
             doctest(MagnonPhononHybridization)'
+      - run: julia --project=docs docs/make.jl
+        env:
+          JULIA_PKG_SERVER: ""
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
+          GKSwstype: "100" # https://discourse.julialang.org/t/generation-of-documentation-fails-qt-qpa-xcb-could-not-connect-to-display/60988
