--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "MagnonPhononHybridization"
 uuid = "83eb1d98-e19b-4996-92b4-3414e1382055"
 authors = ["waltergu <waltergu1989@gmail.com> and contributors"]
-version = "0.2.0"
+version = "0.2.1"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -11,8 +11,9 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TightBindingApproximation = "d3576f78-cb9d-4774-9dc5-b247cf392ff4"
 
 [compat]
-QuantumLattices = "0.10.3"
-SpinWaveTheory = "0.2.0"
-StaticArrays = "1.4"
-TightBindingApproximation = "0.2.1"
+LinearAlgebra = "1.10 - 1"
+QuantumLattices = "0.11.0"
+SpinWaveTheory = "0.2.1"
+StaticArrays = "1.4 - 1"
+TightBindingApproximation = "0.2.3"
 julia = "1.10 - 1.11"
